--- a/demo/miniprogramIoT/pages/xp2p-demo-ipc-playback-cloudmjpg/demo.wxml
+++ b/demo/miniprogramIoT/pages/xp2p-demo-ipc-playback-cloudmjpg/demo.wxml
@@ -6,6 +6,7 @@
   <view wx:else class="page-body">
     <iot-cloud-mjpg-player
       id="{{playerId}}"
+      class="my-player"
       deviceInfo="{{deviceInfo}}"
       videoInfo="{{videoInfo}}"
       muted="{{muted}}"
