--- a/demo/miniprogramIoT/pages/index/index.wxml
+++ b/demo/miniprogramIoT/pages/index/index.wxml
@@ -31,6 +31,7 @@
 <view class="page-body" style="padding-bottom: 20rpx">
   <view class="page-section page-section-gap">
     <view class="notice-box">
+      <view>· P2P播放器<text style="color: red">不支持开发者工具调试和真机调试</text>，播放器相关功能请使用二维码预览方式体验</view>
       <view>· 使用期间需保持设备在线且 xp2pinfo 有效，可以在<text class="text-btn" bindtap="copyDocUrl" data-doc="https://cloud.tencent.com/document/product/1131/52739">控制台云日志</text>查看设备 _sys_xp2p_info 属性</view>
       <view>· 如果遇到问题，可以查看<text class="text-btn" bindtap="copyDocUrl" data-doc="https://mp.weixin.qq.com/wxopen/plugindevdoc?appid=wx1319af22356934bf">插件开发文档</text>中的常见问题部分</view>
       <view>· 如果仍未解决，可以打开<text class="text-btn" bindtap="gotoPage" data-url="/pages/user-files/files?name=logs">Log管理页</text>，发送最新log给我们</view>
