--- a/demo/miniprogramIoT/common.wxss
+++ b/demo/miniprogramIoT/common.wxss
@@ -1,3 +1,28 @@
+.page-body {
+  position: relative;
+  /* padding: 20rpx 0; */
+}
+
+.page-body-padding {
+  padding: 20rpx 0;
+}
+
+.page-section {
+  position: relative;
+  margin-bottom: 20rpx;
+}
+.page-section-gap {
+  margin-bottom: 40rpx;
+}
+.page-section-title {
+  padding-bottom: 10rpx;
+  font-size: 18px;
+}
+
+.page-body-button {
+  margin-bottom: 30rpx;
+}
+
 .component {
   box-sizing: border-box;
   position: relative;
@@ -94,16 +119,4 @@
 
 .hide {
   display: none;
-}
-
-.debug-info-container {
-  position: absolute;
-  width: 100%;
-  max-height: 720rpx;
-  overflow: auto;
-  background-color: #fff;
-  box-sizing: border-box;
-  box-shadow: inset 0 -2rpx 0 0 rgba(0, 0, 0, 0.1);
-  z-index: 100;
-  padding: 20rpx;
 }
