--- a/demo/miniprogramIoT/components/iot-device-input/input.wxml
+++ b/demo/miniprogramIoT/components/iot-device-input/input.wxml
@@ -14,7 +14,7 @@
         设备信息:<text class="text-btn font-small" bindtap="importXp2pInfo">从剪贴板导入</text>
       </view>
       <view class="info-inputs">
-        <view wx:for="{{simpleInputs}}" wx:key="field" class="input-item {{item.scene && item.scene !== scene ? 'hide' : ''}}">
+        <view wx:for="{{simpleInputs}}" wx:key="field" class="input-item {{(item.scene && item.scene !== scene || item.hideIfEmpty && !item.value)  ? 'hide' : ''}}">
           <view wx:if="{{item.text}}">{{item.text}}:</view>
           <view class="weui-cells weui-cells_after-title">
             <view class="weui-cell weui-cell_input">
