--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback/demo.wxml
@@ -21,6 +21,7 @@
       mode="{{options.playerRTC ? 'RTC' : 'live'}}"
       muted="{{muted}}"
       orientation="{{orientation}}"
+      fill="{{fill}}"
       showLog="{{showLog}}"
       showDebugInfo="{{showDebugInfo}}"
       onlyp2p="{{onlyp2pMap && onlyp2pMap.flv}}"
@@ -49,6 +50,7 @@
         iconSize="{{iconSize}}"
         muted="{{muted}}"
         orientation="{{orientation}}"
+        fill="{{fill}}"
         fullScreen="{{fullScreen}}"
         bind:clickicon="clickControlIcon"
       >
