--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
@@ -37,6 +37,7 @@
       muted="{{muted}}"
       orientation="{{orientation}}"
       rotate="{{rotate}}"
+      fill="{{fill}}"
       acceptPlayerEvents="{{acceptPlayerEvents}}"
       showLog="{{showLog}}"
       showDebugInfo="{{showDebugInfo}}"
@@ -79,6 +80,7 @@
         muted="{{muted}}"
         orientation="{{orientation}}"
         rotate="{{rotate}}"
+        fill="{{fill}}"
         fullScreen="{{fullScreen}}"
         bind:clickicon="clickControlIcon"
       >
@@ -98,7 +100,10 @@
     </iot-p2p-player-with-mjpg>
     <view class="page-section page-section-gap">
       <navigator url="/pages/empty/empty" style="color: blue;" hover-class="navigator-hover">打开其他页面（可能触发 live-player 暂停）</navigator>
-      <button bindtap="retryPlayer" disabled="{{!isPlayError}}" type="primary" size="mini">重试</button>
+      <view class="group-button-area">
+        <button bindtap="retryPlayer" disabled="{{!isPlayError}}" class="group-button" type="primary" size="mini">重试</button>
+        <button bindtap="snapshotView" disabled="{{!isPlaySuccess}}" class="group-button" type="primary" size="mini">截取渲染后的画面</button>
+      </view>
     </view>
     <!-- 调试用
     <view class="page-section page-section-gap">
@@ -126,6 +131,7 @@
           style="display:none"
           deviceInfo="{{deviceInfo}}"
           voiceType="{{options.voiceType}}"
+          pusherProps="{{pusherProps}}"
           showLog="{{showLog}}"
           bind:voicestatechange="onVoiceStateChange"
           bind:voicestart="onVoiceProcess"
@@ -144,6 +150,14 @@
           <button bindtap="stopVoice" class="group-button" type="primary" size="mini" disabled="{{!voiceState || voiceState === 'VoiceIdle'}}">
             挂断
           </button>
+        </view>
+        <view wx:if="{{options.voiceType === 'Pusher'}}">
+          <view>变声 (基础库 2.31.0 以上)</view>
+          <radio-group bindchange="voiceChangerChange">
+            <label class="radio" wx:for="{{voiceChangerTypes}}" wx:key="value" >
+              <radio value="{{item.value}}" checked="{{pusherProps.voiceChangerType === item.value}}"/>{{item.label}}
+            </label>
+          </radio-group>
         </view>
       </view>
     </view>
