feat(): x2p2插件更新到3.2.12，新增多channel使用demo

--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback/demo.wxml
@@ -25,6 +25,7 @@
       showLog="{{showLog}}"
       showDebugInfo="{{showDebugInfo}}"
       onlyp2p="{{onlyp2pMap && onlyp2pMap.flv}}"
+      streamChannel="{{streamChannel}}"
       bind:playerstatechange="onPlayerEvent"
       bind:streamstatechange="onPlayerEvent"
       bind:playstart="onPlayStateEvent"
