--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/components/p2p-live-player/p2p-live-player.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/components/p2p-live-player/p2p-live-player.wxml
@@ -2,7 +2,7 @@
   <view>channel-{{streamChannel}}直播</view>
   <iot-p2p-player-with-mjpg
     id="{{playerId}}"
-    class="my-player {{(voiceState && voiceState !== 'VoiceIdle' && intercomType === 'video') ? 'full' : ''}}"
+    class="{{compClass}}"
     streamChannel="{{streamChannel}}"
     deviceInfo="{{deviceInfo}}"
     xp2pInfo="{{xp2pInfo}}"
